css fixed header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@ html {
 #header {
     height: 46px;
     background-color: #000;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 #nav > li {
@@ -75,7 +78,9 @@ html {
     background-color: red;
     cursor: pointer;
 }
-/* #slider {
-    min-height: 500px;
+
+#slider {
+    margin-top: 46px;
+    height: 1500px;
     background-color: #333;
-} */
+}
