--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,11 @@ html {
 
 #header {
     background-color: #000;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1;
 }
 
 #nav > li {
@@ -79,6 +81,31 @@ html {
 }
 
 #slider {
-    height: 1500px;
-    background-color: #333;
+    margin-top: 46px;
+    padding-top: 50%;
+    background-image: url(/assets/img/slider/slider3.jpg);
+    background-color: #ccc;
+    background-position: center top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+#slider .content {
+    position: absolute;
+    color: #fff;
+    left: 0;
+    right: 0;
+    bottom: 47px;
+    text-align: center;
+}
+
+#slider .text-heading {
+    font-weight: 500;
+    margin-bottom: 23px;
+    font-size: 24px;
+}
+
+#slider .text-desc {
+    font-size: 15px;
 }
