--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,3 +109,38 @@ html {
 #slider .text-desc {
     font-size: 15px;
 }
+
+#content {
+    
+}
+
+#content .content-section {
+    width: 800px;
+    padding: 64px 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#content .section-heading {
+    height: 45px;
+    margin: 15px 0px;
+    text-align: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 30px;
+    letter-spacing: 4px;
+}
+
+#content .section-sub-heading {
+    height: 22px;
+    text-align: center;
+    color: #777;
+    font-style: italic;
+    margin: 15px 0px;
+}
+
+#content .about-text {
+    height: 132px;
+    margin: 15px 0px;
+    text-align: justify;
+}
