--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,34 @@ html {
 
 #content .about-text {
     height: 132px;
+    font-size: 15px;
     margin: 15px 0px;
     text-align: justify;
+    line-height: 1.4;
+}
+
+#content .member-list {
+    width: 768px;
+    height: 286px;
+    padding: 32px 0;
+    /* display: inline-block; */
+}
+
+
+
+#content .member-item {
+    width: 255px;
+    height: 221px;
+    float: left;
+    text-align: center;
+}
+
+#content .member-item p {
+    margin: 15px 0;
+}
+
+.member-item img {
+    width: 154px;
+    margin-bottom: 16px;
+    border-radius: 3%;
 }
