--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.text-white {
+    color: #fff !important;
+}
+
 #nav {
     display: inline-block;
 }
@@ -171,4 +175,42 @@ html {
     width: 154px;
     margin-bottom: 16px;
     border-radius: 3%;
+}
+
+#content .tour-section {
+    background-color: #000;
+}
+
+.tickets-list {
+    background-color: #fff;
+    margin-top: 40px;
+    list-style: none;
+}
+
+.tickets-list li {
+    color: #757575;
+    font-size: 15px;
+    padding: 12px 16px;
+    border-bottom: 1px solid #ccc;
+    /* text-decoration: underline; */
+}
+
+.tickets-list .sold-out {
+    background-color: #f44336;
+    color: #fff;
+    padding: 3px 4px;
+    margin-left: 10px;
+}
+
+.tickets-list .quantity {
+    float: right;
+    margin-right: 18px;
+    background-color: #000;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    line-height: 25px;
+    color: #fff;
+    margin-top: -4px;
 }
