--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.clear {
+    clear: both;
+}
+
 .text-white {
     color: #fff !important;
 }
@@ -213,4 +217,59 @@ html {
     line-height: 25px;
     color: #fff;
     margin-top: -4px;
+}
+
+.place-list {
+    margin: 32px -8px 0;
+}
+
+.place-list .place-item {
+    float: left;
+    width: 33.333%;
+    padding: 0 8px;
+}
+
+.place-list img {
+    width: 100%;
+    display: block;
+}
+
+.place-list img:hover {
+    opacity: 0.6;
+}
+
+.place-list .place-content {
+    background-color: #fff;
+    padding: 16px;
+}
+
+.place-list .place-heading {
+    font-size: 15px;
+    margin:0 15px 15px 0;
+}
+
+.place-list .place-time {
+    color: #757575;
+    font-size: 15px;
+    margin: 15px 0;
+}
+
+.place-list .place-body {
+    font-size: 15px;
+    margin: 15px 0;
+    line-height: 1.4;
+}
+
+.place-list .buy-btn {
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 8px 16px;
+    
+    display: inline-block;
+}
+
+.place-list .buy-btn:hover {
+    color: #000;
+    background-color: #ccc;
 }
